# uli

./: .gitignore  CMakeLists.txt  README.md  VERSION  build.sh
.github/workflows/: alpinepackage.yml  archpackage.yml  debpackage.yml  debug.yml  release.yml
compositor/: CMakeLists.txt  COMPOSITE_STANDARD.md  README.md  main.cpp
compositor/lib/components/: ProfileExporter.cpp  ProfileExporter.hpp  ProfileImporter.cpp  ProfileImporter.hpp  SyncManager.cpp  SyncManager.hpp
compositor/lib/components/categorization/lib/: PackageMapper.cpp  PackageMapper.hpp
compositor/lib/components/fetchers/: RepoFetcher.cpp  RepoFetcher.hpp
compositor/lib/components/fetchers/alpine/: AlpineFetcher.cpp  AlpineFetcher.hpp
compositor/lib/components/fetchers/arch/: ArchFetcher.cpp  ArchFetcher.hpp
compositor/lib/components/fetchers/debuntu/: DebianFetcher.cpp  DebianFetcher.hpp
compositor/lib/components/language/: TranslationCompositor.cpp  TranslationCompositor.hpp
compositor/lib/components/storage/: StorageModel.cpp  StorageModel.hpp
compositor/lib/components/yaml/: YamlGenerator.cpp  YamlGenerator.hpp
compositor/lib/ui/: README.md
compositor/lib/ui/Main_Menu/: Main_Menu.cpp  Main_Menu.hpp
compositor/lib/ui/ProfileEditor/: DiskGraphWidget.cpp  DiskGraphWidget.hpp  PartitionDialog.cpp  PartitionDialog.hpp  ProfileEditor.cpp  ProfileEditor.hpp  UserDialog.cpp  UserDialog.hpp
include/: uli_version.hpp.in
installer/: CMakeLists.txt  build.sh  main.cpp
installer/lib/: arglinter.hpp  debug_repo_fetcher.cpp  debug_repo_fetcher.hpp  distribution_checks.hpp  distro_version.hpp  packagemanager_layer_interface.hpp  runtime_check.hpp
installer/lib/bootarg_check/: bootargchecker.hpp
installer/lib/chroot_hook/: authorization.hpp  chroot_hook.hpp
installer/lib/config/: config_exporter.hpp  config_loader.hpp  persistence_manager.hpp  yaml_linter.hpp
installer/lib/dbus/: dbuspoint.hpp
installer/lib/documentation/: extrahelp.hpp  helpguide.hpp
installer/lib/efi_check/: efi_check.hpp
installer/lib/hardware/: README.md
installer/lib/hardware/gpu/: gpudetect.hpp
installer/lib/hardware/storage/: drivedetect.hpp
installer/lib/localegen/: localegen.hpp
installer/lib/ncurses/: COMPONENTS.md  README.md  error_popup.hpp  ncurseslib.cpp  ncurseslib.hpp  popups.hpp
installer/lib/ncurses/configurations/: datastore.hpp
installer/lib/ncurses/help/: help.cpp  help.hpp  help_search.hpp
installer/lib/ncurses/help/helpdocs/: helpdocs.hpp
installer/lib/ncurses/mainmenu/: isolatebuffer.hpp  mainmenu.cpp  mainmenu.hpp  sessionlock.hpp
installer/lib/ncurses/mainmenu/pages/: accounts_page.hpp  bootloader_page.hpp  countries.hpp  disk_page.hpp  graphics_page.hpp  kernels_page.hpp  keyboard_locale_page.hpp  language_page.hpp  mirror_page.hpp  network_page.hpp  page.hpp  profile_page.hpp  stub_page.hpp  timedate_page.hpp  zram_page.hpp
installer/lib/ncurses/test/: simulation_test.hpp  testing.cpp
installer/lib/ncurses/versioning/: version_gen.hpp  versioning.hpp
installer/lib/network_mgr/: connect.hpp  iwd_backend.hpp  network_mgr.hpp  wpa_backend.hpp
installer/lib/package_mgr/: builtin_dict.hpp  indexer.cpp  indexer.hpp  linter_pkg.hpp  repofetch.cpp  repofetch.hpp
installer/lib/package_mgr/alps/: alps_mgr.cpp  alps_mgr.hpp  mirrorlist.hpp
installer/lib/package_mgr/apk/: apk_mgr.cpp  apk_mgr.hpp  mirrorlist.hpp
installer/lib/package_mgr/dpkg_apt/: dpkg_apt.cpp  dpkg_apt.hpp  mirrorlist_debian.hpp
installer/lib/partitioner/: diskcheck.hpp  diskcheck_test.hpp  os_check.hpp  partition_translator.hpp
installer/lib/partitioner/fdisk/: fdisk_wrapper.hpp
installer/lib/partitioner/format/: mkfs_wrapper.hpp  mount_wrapper.hpp
installer/lib/partitioner/identifiers/: blkid_wrapper.hpp  flag_partitions.hpp
installer/lib/partitioner/partdisk/: partdisk.hpp
installer/lib/partitioner/sgdisk/: sgdisk_wrapper.hpp
installer/lib/runtime/: beep.hpp  blackbox.hpp  dependency_check.hpp  design_ui.hpp  dialogbox.hpp  handler.hpp  input_interpreter.hpp  inputbox.hpp  manual_part.hpp  menu.hpp  network_metrics.hpp  package_index.hpp  post_installer.hpp  process_supervisor.hpp  selection_ui.hpp  sudden_abort.hpp  term_capable_check.hpp  test_simulation.hpp  ui.hpp  ui_dualpane_select.hpp  ui_menudesign.hpp  ui_multiselect.hpp  warn.hpp
installer/lib/runtime/contents/drive/: graph.hpp
installer/lib/runtime/contents/kb_layout/: kblayout.hpp
installer/lib/runtime/contents/locale/: locale_encode.hpp  locale_lang.hpp
installer/lib/runtime/contents/profiles/: profiles.cpp
installer/lib/runtime/contents/profiles/desktop/: profile_desktop.hpp
installer/lib/runtime/contents/profiles/minimal/: profile_minimal.hpp
installer/lib/runtime/contents/profiles/server/: profile_server.hpp
installer/lib/runtime/contents/repositories/: repo_config.hpp  repo_validator.hpp
installer/lib/runtime/contents/translations/: all_strings.txt  english.hpp  filipino.hpp  french.hpp  german.hpp  italian.hpp  lang_export.hpp  spanish.hpp  unique_strings.txt
installer/lib/runtime/contents/user/: user_processing.hpp
installer/lib/timedate/: tz_dict.hpp  tz_manager.hpp  ui_tz_select.hpp
patcher/: main.cpp
patcher/lib/: autostart_gen.cpp  autostart_gen.hpp  boot_detector.cpp  boot_detector.hpp  boot_injector.cpp  boot_injector.hpp  iso_backend.cpp  iso_backend.hpp
tests/codetests/: README.md
tests/codetests/patcher/: patcher_output.txt
tests/codetests/tracing/: .gitignore  README.md  main.py  requirements.txt
tests/codetests/tracing/lib/: hook.py  memsniff.py  tracing.py  tui.py
tests/yaml/yaml_tests/installer/: test.yaml
tests/yaml/yaml_tests/profile/: test_profile.yaml
tests/yaml/yaml_tests/translator/: trans.yaml
units/0.1.0-alpha/: uli_installer
